about to do big proof boi

--- a/report/thesis/includes.tex
+++ b/report/thesis/includes.tex
@@ -42,6 +42,7 @@
 \usepackage{todonotes}
 \usepackage{placeins}
 \usepackage{scalerel}
+\usepackage{amssymb}
 
 \makeatletter
 \providecommand{\leftsquigarrow}{%
