--- a/report/thesis/references.bib
+++ b/report/thesis/references.bib
@@ -360,6 +360,23 @@
   file = {/Users/charlielidbury/Zotero/storage/E46BW5N8/Swamy et al. - 2013 - Verifying Higher-order Programs with the Dijkstra .pdf}
 }
 
+@article{turingComputableNumbersApplication1937,
+  title = {On {{Computable Numbers}}, with an {{Application}} to the {{Entscheidungsproblem}}},
+  author = {Turing, A. M.},
+  year = {1937},
+  journal = {Proceedings of the London Mathematical Society},
+  volume = {s2-42},
+  number = {1},
+  pages = {230--265},
+  issn = {1460-244X},
+  doi = {10.1112/plms/s2-42.1.230},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1112/plms/s2-42.1.230},
+  urldate = {2024-06-10},
+  copyright = {{\copyright} 1937 London Mathematical Society},
+  langid = {english},
+  file = {/Users/charlielidbury/Zotero/storage/XBC5NGK2/s2-42.1.html}
+}
+
 @misc{ullrichElectrolysisCoverage,
   title = {Electrolysis {{Coverage}}},
   author = {Ullrich, Sebastian},
